[gd_scene load_steps=16 format=3 uid="uid://ba6kwn24afgeu"]

[ext_resource type="Script" path="res://Scripts/Instruments/Radar.gd" id="1_fb1il"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ftrl4"]
albedo_color = Color(0, 0.141176, 0.141176, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_dpwkw"]
material = SubResource("StandardMaterial3D_ftrl4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_252ki"]
albedo_color = Color(0, 0.494118, 0.482353, 1)
emission = Color(0, 0.733333, 0.611765, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lmeat"]
material = SubResource("StandardMaterial3D_252ki")

[sub_resource type="BoxShape3D" id="BoxShape3D_7brmj"]
size = Vector3(1, 6.93, 0.805)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_618nm"]
albedo_color = Color(0, 0.494118, 0.482353, 1)
emission = Color(0, 0.733333, 0.611765, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qeipc"]
material = SubResource("StandardMaterial3D_618nm")

[sub_resource type="BoxShape3D" id="BoxShape3D_4g8u4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b1w75"]
albedo_color = Color(0, 0.494118, 0.482353, 1)
emission = Color(0, 0.733333, 0.611765, 1)

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_wv1aj"]
material = SubResource("StandardMaterial3D_b1w75")

[sub_resource type="CylinderMesh" id="CylinderMesh_e2k8x"]
material = SubResource("StandardMaterial3D_252ki")

[sub_resource type="Curve3D" id="Curve3D_0f2l3"]
bake_interval = 0.01
_data = {
"points": PackedVector3Array(0.39, 0, 0.095, 0, 0, 0, 0.701, 0, -0.004, 0.5, 0, 0.33, 0, 0, 0, 0, 0, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="CylinderMesh" id="CylinderMesh_vhcd2"]
material = SubResource("StandardMaterial3D_252ki")

[sub_resource type="BoxShape3D" id="BoxShape3D_ir8c1"]
size = Vector3(1, 7.735, 1)

[node name="Radar" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.50587, 1.69075, 7.27147)
script = ExtResource("1_fb1il")

[node name="Plate" type="MeshInstance3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 0.02, 0, 0, 0, 1.3, 0, 0, 0)
mesh = SubResource("CylinderMesh_dpwkw")

[node name="Spinner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.19209e-07)

[node name="Needle" type="MeshInstance3D" parent="Spinner"]
transform = Transform3D(0.03, 0, 0, 0, 0.01, 1.77636e-15, 0, -2.77556e-17, 0.6, 0, -0.02, 0.313993)
mesh = SubResource("BoxMesh_lmeat")
skeleton = NodePath("../..")

[node name="NeedleArea" type="Area3D" parent="Spinner/Needle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, -0.065)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Spinner/Needle/NeedleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.81158, -0.0650024, 0)
shape = SubResource("BoxShape3D_7brmj")

[node name="NeedleHolder" type="MeshInstance3D" parent="Spinner"]
transform = Transform3D(0.11, 0, 0, 0, 0.11, 0, 0, 0, 0.11, 0, 0, 0)
mesh = SubResource("SphereMesh_qeipc")
skeleton = NodePath("../..")

[node name="NeedleHolderArea" type="Area3D" parent="Spinner/NeedleHolder"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Spinner/NeedleHolder/NeedleHolderArea"]
shape = SubResource("BoxShape3D_4g8u4")

[node name="HolderHolder" type="MeshInstance3D" parent="Spinner/NeedleHolder"]
transform = Transform3D(1.09, 0, 0, 0, 1.09, 3.55271e-15, 0, -7.10543e-15, 1.09, 0, 0.25, 0)
mesh = SubResource("TubeTrailMesh_wv1aj")

[node name="MonsterClone" type="MeshInstance3D" parent="."]
transform = Transform3D(0.097, 0, 0, 0, 0.017, 0, 0, 0, 0.097, 0.407443, -0.0336447, 0)
mesh = SubResource("CylinderMesh_e2k8x")
skeleton = NodePath("")

[node name="Path" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, 0)
curve = SubResource("Curve3D_0f2l3")

[node name="Follow" type="PathFollow3D" parent="Path"]
transform = Transform3D(-0.710642, 0, 0.703529, 0, 0.999987, 0, -0.703528, 0, -0.710642, 0, 0, 0)
progress = 0.056424
loop = false
tilt_enabled = false

[node name="Monster" type="MeshInstance3D" parent="Path/Follow"]
transform = Transform3D(0.0970001, -9.99201e-16, 1.86265e-08, -5.32907e-15, 0.017, 6.66134e-16, -1.86265e-09, -1.66533e-16, 0.0970001, 0, 0, 0)
mesh = SubResource("CylinderMesh_vhcd2")
skeleton = NodePath("../../../Spinner/NeedleHolder")

[node name="MonsterArea" type="Area3D" parent="Path/Follow/Monster"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path/Follow/Monster/MonsterArea"]
shape = SubResource("BoxShape3D_ir8c1")

[connection signal="area_entered" from="Path/Follow/Monster/MonsterArea" to="." method="_on_monster_area_area_entered"]
